--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -57,7 +57,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     tools:text="Price: "
-                    android:text="@{productModel.price}"
+                    android:text="Price"
                     android:textSize="18sp"
                     />
 
@@ -77,7 +77,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     tools:text="Tax: "
-                    android:text="@{productModel.tax}"
+                    android:text="Tax"
                     android:textSize="18sp"
                     />
 
