--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -7,18 +7,11 @@
             name="productModel"
             type="com.example.swipeassignment.network.models.ProductListing" />
     </data>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cvProduct"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="4dp"
-        android:layout_marginTop="8dp"
-        >
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cvProduct"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_marginTop="8dp"
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/imageView"
@@ -84,6 +77,5 @@
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
 </layout>
 
