--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -129,4 +129,15 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        app:icon="@drawable/ic_add"
+        android:text="Add Product"
+        app:layout_anchor="@id/rvProduct"
+        app:layout_anchorGravity="bottom|end"
+        app:showMotionSpec="@xml/fab_show_motion_spec" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
