--- a/app/src/main/res/layout/add_product_titlebar.xml
+++ b/app/src/main/res/layout/add_product_titlebar.xml
@@ -16,6 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
+            android:id="@+id/backButton"
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:layout_centerInParent="true"
