--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -1,14 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".feature.addproduct.AddProduct">
 
-   <include
-       android:id="@+id/titlebar"
-       layout="@layout/add_product_titlebar">
+<layout>
+   <data>
+      <variable
+          name="viewModel"
+          type="com.example.swipeassignment.feature.addproduct.AddProductViewModel" />
+   </data>
 
-   </include>
+   <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:app="http://schemas.android.com/apk/res-auto"
+       xmlns:tools="http://schemas.android.com/tools"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       tools:context=".feature.addproduct.AddProduct">
 
-</FrameLayout>
+      <include
+          android:id="@+id/titlebar"
+          layout="@layout/add_product_titlebar"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent">
+      </include>
+
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="vertical"
+          android:layout_marginTop="16dp"
+          android:layout_marginStart="16dp"
+          android:layout_marginEnd="16dp"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/titlebar">
+
+         <com.google.android.material.textfield.TextInputLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etProductName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/product_name" />
+         </com.google.android.material.textfield.TextInputLayout>
+
+         <com.google.android.material.textfield.TextInputLayout
+             android:id="@+id/productTypeDropdown"
+             android:layout_marginTop="16dp"
+             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:hint="@string/product_type">
+
+            <AutoCompleteTextView
+                android:id="@+id/productTypeAutoComplete"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="none"
+                android:imeOptions="actionDone" />
+         </com.google.android.material.textfield.TextInputLayout>
+
+         <com.google.android.material.textfield.TextInputLayout
+             android:layout_width="match_parent"
+             android:layout_marginTop="16dp"
+             android:layout_height="wrap_content">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etProductPrice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
+                android:hint="@string/product_price" />
+         </com.google.android.material.textfield.TextInputLayout>
+
+         <com.google.android.material.textfield.TextInputLayout
+             android:layout_width="match_parent"
+             android:layout_marginTop="16dp"
+             android:layout_height="wrap_content">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etProductTax"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
+                android:hint="@string/product_tax" />
+         </com.google.android.material.textfield.TextInputLayout>
+
+         <androidx.coordinatorlayout.widget.CoordinatorLayout
+             android:id="@+id/imageLayout"
+             android:layout_marginTop="16dp"
+             android:layout_width="150dp"
+             android:background="@color/white"
+             android:visibility="gone"
+             android:layout_height="150dp">
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:cardElevation="10dp"
+                app:cardCornerRadius="12dp"
+                >
+               <ImageView
+                   android:id="@+id/ivProduct"
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent"
+                   android:src="@drawable/box"
+                   />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cvDeleteImage"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="end"
+                android:layout_margin="10dp"
+                app:cardElevation="10dp"
+                app:cardCornerRadius="12dp"
+                >
+               <ImageView
+                   android:id="@+id/ivDelete"
+                   android:layout_width="24dp"
+                   android:layout_height="24dp"
+                   android:layout_gravity="center"
+                   android:src="@drawable/delete"
+                   />
+            </androidx.cardview.widget.CardView>
+         </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+         <Button
+             android:id="@+id/btnUpload"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="16dp"
+             android:background="@drawable/bg_buttonxml"
+             android:text="Select Image"
+             android:textSize="18sp"
+             />
+
+      </LinearLayout>
+
+   </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
