--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -28,29 +28,16 @@
                 android:layout_marginTop="14dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginRight="20dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginBottom="7dp"
                 android:background="@color/white">
 
-                <RelativeLayout
-                    android:id="@+id/backLayout"
-                    android:layout_width="48dp"
-                    android:layout_height="match_parent"
-                    android:background="@color/white">
 
-                    <ImageView
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:layout_centerInParent="true"
-                        android:src="@drawable/ic_back_vector_black" />
-
-                </RelativeLayout>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_toEndOf="@+id/backLayout"
-                    android:layout_toRightOf="@+id/backLayout"
                     android:background="@drawable/bg_search_box"
                     android:paddingStart="20dp"
                     android:paddingTop="8dp"
@@ -105,27 +92,46 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-            <androidx.cardview.widget.CardView
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="100dp"
+            android:background="@drawable/rv_background"
+            android:elevation="15dp"
+            app:cardCornerRadius="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/app_bar">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvProduct"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/rv_background"
-                android:layout_marginTop="100dp"
-                app:cardCornerRadius="20dp"
-                app:layout_constraintTop_toBottomOf="@+id/app_bar"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:elevation="15dp"
-                app:layout_constraintStart_toStartOf="parent">
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rvProduct"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        tools:listitem="@layout/product_item" />
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                tools:listitem="@layout/product_item" />
 
 
-            </androidx.cardview.widget.CardView>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/progressView"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:elevation="15dp"
+            app:cardCornerRadius="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/app_bar">
+
+            <ProgressBar
+                android:layout_width="30dp"
+                android:layout_gravity="center"
+                android:layout_height="30dp" />
+        </androidx.cardview.widget.CardView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
